--- a/privacy.html
+++ b/privacy.html
@@ -73,7 +73,7 @@
     </p>
 
     <footer>
-      Contact: support@yourdomain.com
+      Contact: conversyllc@gmail.com
     </footer>
   </div>
 </body>
